--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,5 @@ services:
   - type: web
     name: fanous-bot
     env: python
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: python main.py
