--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-git add requirements.txt
-git commit -m "fixing aiohttp build error"
-git push
+aiohttp==3.8.1
+aiohttp-socks==0.7.1
+python-dotenv==1.0.0
