--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
-  - type: web
+  - type: worker
     name: fanous-bot
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install --no-binary :all: --no-cache-dir -r requirements.txt
     startCommand: python main.py
